fixing some layout issues

--- a/lesson6/css/large.css
+++ b/lesson6/css/large.css
@@ -11,7 +11,7 @@
     }
 
     nav ul {
-        padding: 0px 100px;
+        padding: 5px 100px;
         white-space: nowrap;
     }
 
