--- a/lesson6/css/medium.css
+++ b/lesson6/css/medium.css
@@ -12,13 +12,13 @@
 
     nav {
         border-bottom: 5px solid #000;
-        min-height: 30px;
     }
 
     nav ul li {
         align-items: flex-end;
         max-height: initial;
         height: auto;
+        padding: 10px;
     }
 
     nav ul {
@@ -45,7 +45,7 @@
         flex-direction: row;
         align-items: center;
         flex-wrap: wrap;
-        justify-content: space-between;
+        justify-content: flex-start;
         display: flex;
     }
 
